2008-03-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/ginputstream.override:
	Pass in l instead of i to PyArg_ParseTupleAndKeywords when
	parsing a long. Fixes the build on 64-bit systems.
	(#521165, Thomas Leonard)

2008-03-02  Johan Dahlin  <johan@gnome.org>

	* Makefile.am: Dist .m4 files.
	(#496011, Ed Catmur)

2008-03-02  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/gobjectmodule.c (REGISTER_TYPE): Never override customly
	set 'tp_new' and 'tp_alloc'.

2008-02-01  Dan Winship  <danw@gnome.org>

	* pygobject-2.0.pc.in (defsdir): Add this so other bindings can
	find gio.defs

2008-01-21  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (async_result_callback_marshal): 
	Don't assume the buffer is set, use Py_XINCREF instead of Py_INCREF.

	* gio/Makefile.am:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	* gio/gvolumemonitor.override:
	* gio/gfile.override:
	* tests/test_gio.py:
	Implement and test GFile.read_async. Use try/finally to always quit
	the mainloop, even if the test fail.
	Update source comment headers.

2008-01-20  Johan Dahlin  <johan@gnome.org>

	* tests/test_gio.py (TestVolumeMonitor): New test

	* gio/Makefile.am:
	* gio/ginputstream.override:
	* gio/gio.override:
	* gio/giomodule.c:
	* gio/goutputstream.override:
	* gio/gvolumemonitor.override:
	* gio/unix.override:
	* gio/unixmodule.c:

	Split out overrides into more files. Fix up module description in 
	comments

2008-01-20  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (_wrap_g_simple_async_result_get_buffer): Add
	a new method, to fetch the buffer
	(_wrap_g_input_stream_read_async): Save a reference to the buffer.
	* tests/test_gio.py (TestInputStream.testReadAsync.callback): 
	Check the content
	
	* tests/test_gio.py (TestInputStream.testReadAsyncError): 
	New function to test error condition of async read.

	* gio/gio.override (async_result_callback_marshal): Grab a reference
	to callback/data.

2008-01-19  Johan Dahlin  <johan@gnome.org>
